<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignupPage">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.49" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.51" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.06" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <EditText
        android:id="@+id/fName"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/boder_for_etdtext"
        android:ems="10"
        android:hint="@string/fname"
        android:textColor="@color/black"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="@+id/guideline11" />

    <EditText
        android:id="@+id/lName"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/boder_for_etdtext"
        android:ems="10"
        android:hint="@string/lname"
        android:textColor="@color/black"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toTopOf="@+id/guideline11" />

    <EditText
        android:id="@+id/fName2"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/boder_for_etdtext"
        android:ems="10"
        android:hint="@string/bdate"
        android:textColor="@color/black"
        android:importantForAutofill="no"
        android:inputType="date"
        android:padding="10dp"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/fName" />


    <EditText
        android:id="@+id/sMobileNumber"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/boder_for_etdtext"
        android:ems="10"
        android:hint="@string/mobileNumber"
        android:textColor="@color/black"
        android:importantForAutofill="no"
        android:inputType="number"
        android:padding="10dp"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/fName2" />

    <EditText
        android:id="@+id/sEmail"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/boder_for_etdtext"
        android:ems="10"
        android:hint="@string/email"
        android:textColor="@color/black"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="10dp"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/sMobileNumber" />

    <EditText
        android:id="@+id/sPassword"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/boder_for_etdtext"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/sEmail" />


    <EditText
        android:id="@+id/sConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/boder_for_etdtext"
        android:ems="10"
        android:hint="@string/cpassword"
        android:textColor="@color/black"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/sPassword" />

    <Button
        android:id="@+id/signupin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUp"
        android:background="@drawable/btn_shade"
        app:layout_constraintBottom_toTopOf="@+id/guideline12"
        app:layout_constraintEnd_toStartOf="@+id/guideline8" />




</androidx.constraintlayout.widget.ConstraintLayout>